--- a/assets/css/finish.css
+++ b/assets/css/finish.css
@@ -74,9 +74,9 @@ nav{
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 2rem; /* Make the number big! */
+  font-size: 2rem;
   font-weight: bold;
-  color: var(--secondary); /* A nice dark color */
+  color: var(--secondary);
 }
 
 .wpm-unit {
