--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -344,18 +344,37 @@ header select{
     grid-column: span 2;
     background-color: #ccc;
 }
-
-@media (max-width: 790px) {
+#resp-btn{
+    display: none;
+}
+@media (width < 790px) {
     .sidebar {
-        top: 0rem;
-        left: 1rem;
+        display: none;
+        position: absolute !important;
+        top: 7rem;
+        gap: 0;
+        left: 0;
         position: relative;
         width: 100%;
-        height: auto;
+        height: 100%;
         box-shadow: none;
         padding: 15px;
+        background-color: var(--quatre);
+        justify-content: left;
     }
-
+    #resp-btn{
+        display: block;
+        margin-top: 20px;
+        padding: 12px;
+        height: fit-content;
+        background-color: transparent;
+        color: var(--tertiary);
+        border: 2px solid var(--tertiary);
+        border-radius: 8px;
+        font-size: 2rem;
+        cursor: pointer;
+        transition: background 0.3s ease;
+    }
     .sidebar button span {
         opacity: 1;
         max-width: 200px;
@@ -369,10 +388,14 @@ header select{
         display: flex;
         flex-wrap: wrap;
         margin-left: 0;
+        margin-top: 6rem;
         margin-bottom: 0px;
         align-items: center;
     }
-
+    .side-top,
+    .side-bottom {
+        border: none;
+    }
     #word-display {
         width: 95%;
         padding: 10px;
@@ -397,5 +420,11 @@ header select{
     .select {
         width: 100%;
         margin-top: 15px;
+    }
+    nav{
+        position: sticky;
+        top: 0;
+        background-color: var(--primary);
+        height: 7rem;
     }
 }
