style: landing page

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -206,3 +206,14 @@ button:hover {
 }
   
   
+@media (width <= 790px){
+  .bars{
+    display: none;
+  }
+  .right{
+    display: none;
+  }
+  .left{
+    width: 100%;
+  }
+}
