--- a/assets/css/finish.css
+++ b/assets/css/finish.css
@@ -141,7 +141,7 @@ flex-direction: row;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
  }
-.tsyaiko {
+.stat {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
