--- a/assets/css/finish.css
+++ b/assets/css/finish.css
@@ -2,17 +2,27 @@
   font-family: 'Quicksand';
   src: url(../font/Quicksand-Medium.ttf);
 }
-
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Quicksand';
+@font-face {
+  font-family: 'Fira';
+  src: url(../font/FiraCode-Medium.ttf);
 }
+@font-face {
+  font-family: 'JetBrains';
+  src: url(../font/JetBrainsMono-Medium.ttf);
+}
+
+
 :root {
   --primary: #777;
   --secondary : #333;
   --tertiary : #7e0000;
+  --font : 'Quicksand'
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--font);
 }
 body{
   background-color: var(--primary);
@@ -31,6 +41,11 @@ nav{
   width: 90%;
   height: 60vh;
   margin-top: -2rem;
+}
+.comment{
+  text-align: center;
+  color: var(--secondary);
+  font-size: 1.5rem;
 }
 .time{
   display: flex;
@@ -104,9 +119,12 @@ display: flex;
 flex-direction: row;
 }
 .btn {
-  width: 11rem;
-  height: 3rem;
-  margin-left: 42%;
+  width: fit-content;
+  padding: 15px;
+  margin: auto;    
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   background: black;
   color: white;
   border: none;
@@ -142,6 +160,7 @@ flex-direction: row;
   transition: all 0.5s;
  }
 .stat {
+  margin-top: -1rem;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
