style: responsive for ending

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -348,7 +348,7 @@ header select{
 }
 @media (width < 790px) {
     .sidebar {
-        position: absolute !important;
+        position: fixed !important;
         top: 7rem;
         gap: 0;
         left: 0;
