--- a/assets/css/finish.css
+++ b/assets/css/finish.css
@@ -165,3 +165,29 @@ flex-direction: row;
   flex-direction: row;
   justify-content: space-around;
 }
+
+@media (width < 790px) {
+  .stat{
+    display: block;
+    text-align: center;
+  }
+  
+  .wpm-container{
+    margin-block: 1rem;
+  }
+  #curve_chart{
+    display: none;
+  }
+  .time{
+    display: flex;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-inline: 6rem !important;
+    margin-top: 55px;
+    color: var(--secondary);
+  }
+  .accuracy{
+    margin: auto;
+    margin-bottom: 4rem;
+  }
+}
