--- a/assets/css/finish.css
+++ b/assets/css/finish.css
@@ -38,9 +38,11 @@ nav{
   justify-content: space-between;
 }
 #curve_chart {
-  width: 90%;
+  width: 100%;
   height: 60vh;
-  margin-top: -2rem;
+  margin: 0 auto;
+  margin-top: -2rem !important;
+  box-sizing: border-box;
 }
 .comment{
   text-align: center;
@@ -171,12 +173,12 @@ flex-direction: row;
     display: block;
     text-align: center;
   }
+    #curve_chart {
+      height: 50vh;
+    }
   
   .wpm-container{
     margin-block: 1rem;
-  }
-  #curve_chart{
-    display: none;
   }
   .time{
     display: flex;
